--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "type": "module",
   "dependencies": {
+    "@auth/core": "^0.18.0",
+    "@auth/sveltekit": "^0.3.11",
+    "bits-ui": "^0.9.0",
     "clsx": "^2.0.0",
     "lucide-svelte": "^0.288.0",
     "tailwind-merge": "^1.14.0",
