--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
+    "db": "surreal start -u admin -p admin",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
@@ -34,6 +35,7 @@
     "bits-ui": "^0.9.0",
     "clsx": "^2.0.0",
     "lucide-svelte": "^0.288.0",
+    "surrealdb.js": "^0.11.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.16"
   }
