--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
 	},
 	"devDependencies": {
 		"@iconify/svelte": "^3.1.6",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -28,7 +29,7 @@
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
